evaluation/capybarakv_interface/src/bindings.rs

extern "C" {
    pub fn rocksdb_cache_destroy(cache: *mut rocksdb_cache_t);
}
extern "C" {
    pub fn rocksdb_cache_set_capacity(cache: *mut rocksdb_cache_t, capacity: usize);
}
extern "C" {
    pub fn rocksdb_cache_get_usage(cache: *mut rocksdb_cache_t) -> usize;
}
extern "C" {
    pub fn rocksdb_cache_get_pinned_usage(cache: *mut rocksdb_cache_t) -> usize;
}
extern "C" {
    pub fn rocksdb_dbpath_create(
        path: *const ::std::os::raw::c_char,
        target_size: u64,
    ) -> *mut rocksdb_dbpath_t;
}
extern "C" {
    pub fn rocksdb_dbpath_destroy(arg1: *mut rocksdb_dbpath_t);
}
extern "C" {
    pub fn rocksdb_create_default_env() -> *mut rocksdb_env_t;
}
extern "C" {
    pub fn rocksdb_create_mem_env() -> *mut rocksdb_env_t;
}
extern "C" {
    pub fn rocksdb_env_set_background_threads(env: *mut rocksdb_env_t, n: ::std::os::raw::c_int);
}
extern "C" {
    pub fn rocksdb_env_set_high_priority_background_threads(
        env: *mut rocksdb_env_t,
        n: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_env_join_all_threads(env: *mut rocksdb_env_t);
}
extern "C" {
    pub fn rocksdb_env_lower_thread_pool_io_priority(env: *mut rocksdb_env_t);
}
extern "C" {
    pub fn rocksdb_env_lower_high_priority_thread_pool_io_priority(env: *mut rocksdb_env_t);
}
extern "C" {
    pub fn rocksdb_env_lower_thread_pool_cpu_priority(env: *mut rocksdb_env_t);
}
extern "C" {
    pub fn rocksdb_env_lower_high_priority_thread_pool_cpu_priority(env: *mut rocksdb_env_t);
}
extern "C" {
    pub fn rocksdb_env_destroy(arg1: *mut rocksdb_env_t);
}
extern "C" {
    pub fn rocksdb_envoptions_create() -> *mut rocksdb_envoptions_t;
}
extern "C" {
    pub fn rocksdb_envoptions_destroy(opt: *mut rocksdb_envoptions_t);
}
extern "C" {
    pub fn rocksdb_sstfilewriter_create(
        env: *const rocksdb_envoptions_t,
        io_options: *const rocksdb_options_t,
    ) -> *mut rocksdb_sstfilewriter_t;
}
extern "C" {
    pub fn rocksdb_sstfilewriter_create_with_comparator(
        env: *const rocksdb_envoptions_t,
        io_options: *const rocksdb_options_t,
        comparator: *const rocksdb_comparator_t,
    ) -> *mut rocksdb_sstfilewriter_t;
}
extern "C" {
    pub fn rocksdb_sstfilewriter_open(
        writer: *mut rocksdb_sstfilewriter_t,
        name: *const ::std::os::raw::c_char,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_sstfilewriter_add(
        writer: *mut rocksdb_sstfilewriter_t,
        key: *const ::std::os::raw::c_char,
        keylen: usize,
        val: *const ::std::os::raw::c_char,
        vallen: usize,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_sstfilewriter_put(
        writer: *mut rocksdb_sstfilewriter_t,
        key: *const ::std::os::raw::c_char,
        keylen: usize,
        val: *const ::std::os::raw::c_char,
        vallen: usize,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_sstfilewriter_merge(
        writer: *mut rocksdb_sstfilewriter_t,
        key: *const ::std::os::raw::c_char,
        keylen: usize,
        val: *const ::std::os::raw::c_char,
        vallen: usize,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_sstfilewriter_delete(
        writer: *mut rocksdb_sstfilewriter_t,
        key: *const ::std::os::raw::c_char,
        keylen: usize,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_sstfilewriter_finish(
        writer: *mut rocksdb_sstfilewriter_t,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_sstfilewriter_file_size(
        writer: *mut rocksdb_sstfilewriter_t,
        file_size: *mut u64,
    );
}
extern "C" {
    pub fn rocksdb_sstfilewriter_destroy(writer: *mut rocksdb_sstfilewriter_t);
}
extern "C" {
    pub fn rocksdb_ingestexternalfileoptions_create() -> *mut rocksdb_ingestexternalfileoptions_t;
}
extern "C" {
    pub fn rocksdb_ingestexternalfileoptions_set_move_files(
        opt: *mut rocksdb_ingestexternalfileoptions_t,
        move_files: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_ingestexternalfileoptions_set_snapshot_consistency(
        opt: *mut rocksdb_ingestexternalfileoptions_t,
        snapshot_consistency: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_ingestexternalfileoptions_set_allow_global_seqno(
        opt: *mut rocksdb_ingestexternalfileoptions_t,
        allow_global_seqno: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_ingestexternalfileoptions_set_allow_blocking_flush(
        opt: *mut rocksdb_ingestexternalfileoptions_t,
        allow_blocking_flush: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_ingestexternalfileoptions_set_ingest_behind(
        opt: *mut rocksdb_ingestexternalfileoptions_t,
        ingest_behind: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_ingestexternalfileoptions_destroy(opt: *mut rocksdb_ingestexternalfileoptions_t);
}
extern "C" {
    pub fn rocksdb_ingest_external_file(
        db: *mut rocksdb_t,
        file_list: *const *const ::std::os::raw::c_char,
        list_len: usize,
        opt: *const rocksdb_ingestexternalfileoptions_t,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_ingest_external_file_cf(
        db: *mut rocksdb_t,
        handle: *mut rocksdb_column_family_handle_t,
        file_list: *const *const ::std::os::raw::c_char,
        list_len: usize,
        opt: *const rocksdb_ingestexternalfileoptions_t,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_try_catch_up_with_primary(
        db: *mut rocksdb_t,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_slicetransform_create(
        state: *mut ::std::os::raw::c_void,
        destructor: ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>,
        transform: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
                key: *const ::std::os::raw::c_char,
                length: usize,
                dst_length: *mut usize,
            ) -> *mut ::std::os::raw::c_char,
        >,
        in_domain: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
                key: *const ::std::os::raw::c_char,
                length: usize,
            ) -> ::std::os::raw::c_uchar,
        >,
        in_range: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
                key: *const ::std::os::raw::c_char,
                length: usize,
            ) -> ::std::os::raw::c_uchar,
        >,
        name: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
            ) -> *const ::std::os::raw::c_char,
        >,
    ) -> *mut rocksdb_slicetransform_t;
}
extern "C" {
    pub fn rocksdb_slicetransform_create_fixed_prefix(arg1: usize)
        -> *mut rocksdb_slicetransform_t;
}
extern "C" {
    pub fn rocksdb_slicetransform_create_noop() -> *mut rocksdb_slicetransform_t;
}
extern "C" {
    pub fn rocksdb_slicetransform_destroy(arg1: *mut rocksdb_slicetransform_t);
}
pub const rocksdb_similar_size_compaction_stop_style: _bindgen_ty_8 = 0;
pub const rocksdb_total_size_compaction_stop_style: _bindgen_ty_8 = 1;
pub type _bindgen_ty_8 = ::std::os::raw::c_uint;
extern "C" {
    pub fn rocksdb_universal_compaction_options_create(
    ) -> *mut rocksdb_universal_compaction_options_t;
}
extern "C" {
    pub fn rocksdb_universal_compaction_options_set_size_ratio(
        arg1: *mut rocksdb_universal_compaction_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_universal_compaction_options_set_min_merge_width(
        arg1: *mut rocksdb_universal_compaction_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_universal_compaction_options_set_max_merge_width(
        arg1: *mut rocksdb_universal_compaction_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_universal_compaction_options_set_max_size_amplification_percent(
        arg1: *mut rocksdb_universal_compaction_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_universal_compaction_options_set_compression_size_percent(
        arg1: *mut rocksdb_universal_compaction_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_universal_compaction_options_set_stop_style(
        arg1: *mut rocksdb_universal_compaction_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_universal_compaction_options_destroy(
        arg1: *mut rocksdb_universal_compaction_options_t,
    );
}
extern "C" {
    pub fn rocksdb_fifo_compaction_options_create() -> *mut rocksdb_fifo_compaction_options_t;
}
extern "C" {
    pub fn rocksdb_fifo_compaction_options_set_max_table_files_size(
        fifo_opts: *mut rocksdb_fifo_compaction_options_t,
        size: u64,
    );
}
extern "C" {
    pub fn rocksdb_fifo_compaction_options_destroy(
        fifo_opts: *mut rocksdb_fifo_compaction_options_t,
    );
}
extern "C" {
    pub fn rocksdb_livefiles_count(arg1: *const rocksdb_livefiles_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rocksdb_livefiles_name(
        arg1: *const rocksdb_livefiles_t,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn rocksdb_livefiles_level(
        arg1: *const rocksdb_livefiles_t,
        index: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rocksdb_livefiles_size(
        arg1: *const rocksdb_livefiles_t,
        index: ::std::os::raw::c_int,
    ) -> usize;
}
extern "C" {
    pub fn rocksdb_livefiles_smallestkey(
        arg1: *const rocksdb_livefiles_t,
        index: ::std::os::raw::c_int,
        size: *mut usize,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn rocksdb_livefiles_largestkey(
        arg1: *const rocksdb_livefiles_t,
        index: ::std::os::raw::c_int,
        size: *mut usize,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn rocksdb_livefiles_entries(
        arg1: *const rocksdb_livefiles_t,
        index: ::std::os::raw::c_int,
    ) -> u64;
}
extern "C" {
    pub fn rocksdb_livefiles_deletions(
        arg1: *const rocksdb_livefiles_t,
        index: ::std::os::raw::c_int,
    ) -> u64;
}
extern "C" {
    pub fn rocksdb_livefiles_destroy(arg1: *const rocksdb_livefiles_t);
}
extern "C" {
    pub fn rocksdb_get_options_from_string(
        base_options: *const rocksdb_options_t,
        opts_str: *const ::std::os::raw::c_char,
        new_options: *mut rocksdb_options_t,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_delete_file_in_range(
        db: *mut rocksdb_t,
        start_key: *const ::std::os::raw::c_char,
        start_key_len: usize,
        limit_key: *const ::std::os::raw::c_char,
        limit_key_len: usize,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_delete_file_in_range_cf(
        db: *mut rocksdb_t,
        column_family: *mut rocksdb_column_family_handle_t,
        start_key: *const ::std::os::raw::c_char,
        start_key_len: usize,
        limit_key: *const ::std::os::raw::c_char,
        limit_key_len: usize,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
